--- a/app/InstaClone/www/templates/signup.html
+++ b/app/InstaClone/www/templates/signup.html
@@ -8,22 +8,22 @@
     <ion-content class="">
         <div class="list">
             <label class="item item-input">
-          <input type="text" placeholder="First Name">
+          <input type="text" placeholder="First Name" ng-model="firstname">
         </label>
             <label class="item item-input">
-          <input type="text" placeholder="Last Name">
-        </label>
-
-            <label class="item item-input">
-          <input type="text" placeholder="Username">
+          <input type="text" placeholder="Last Name" ng-model="lastname">
         </label>
 
             <label class="item item-input">
-          <input type="password" placeholder="Password">
+          <input type="text" placeholder="Username" ng-model="username">
+        </label>
+
+            <label class="item item-input">
+          <input type="password" placeholder="Password" ng-model="password">
         </label>
 
         </div>
-        <button class="button button-block button-positive">
+        <button class="button button-block button-positive" ng-click="saveUser(firstname, lastname, username, password)">
               CADASTRAR
             </button>
     </ion-content>
