--- a/app/InstaClone/www/templates/cadastro-produto.html
+++ b/app/InstaClone/www/templates/cadastro-produto.html
@@ -6,6 +6,22 @@
 -->
 <ion-view view-title="Cadastro Produto">
     <ion-content class="">
-
+        <div class="list">
+            <label class="item item-input">
+              <input type="text" placeholder="titulo">
+            </label>
+            <label class="item item-input">
+              <input type="text" placeholder="preco">
+            </label>
+            <label class="item item-input">
+              <textarea placeholder="descricao"></textarea>
+            </label>
+        </div>
+        <button class="button button-block button-positive" ng-click="cadastrar(titulo, preco, descricao)">
+          Cadastrar
+        </button>
+        <button class="button button-block button-stable" ng-click="cancelar()">
+          Cancelar
+        </button>
     </ion-content>
 </ion-view>
