--- a/app/InstaClone/www/templates/produtos.html
+++ b/app/InstaClone/www/templates/produtos.html
@@ -5,13 +5,18 @@
   The Friends service returns an array of friend data
 -->
 <ion-view view-title="Produtos">
+    <ion-nav-buttons side="right">
+        <button class="button" ng-click="goToEdit()">
+        +
+      </button>
+    </ion-nav-buttons>
     <ion-content class="">
-        <div class="list card">
+        <div class="list card" ng-repeat="prod in produtos">
 
             <div class="item item-avatar">
                 <img src="https://scontent.fplu1-1.fna.fbcdn.net/v/t1.0-9/13567473_1037407179681328_1170942378351640073_n.jpg?oh=edaf0372ff1dbe8ac3a472a25e76770c&oe=590AE78D" style="width: 80px;">
-                <h2>Pretty Hate Machine</h2>
-                <p>Nine Inch Nails</p>
+                <h2>{{prod.titulo}}</h2>
+                <p>{{prod.descricao}}</p>
             </div>
 
             <div class="item item-image">
